--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="daily-challenge.css" rel="stylesheet" />
+    <title>My Daliy Challenge</title>
+  </head>
+  <body>
+    <h1>Max Challenge for Thursday, June 23rd</h1>
+    <p id="todays-challenge">
+      Learn about the basics of web development - specifically dive into HTML &
+      CSS.
+    </p>
+    <p>
+      I'll achieve this goal by diving into
+      <a href="https://www.google.com/">more learning resources.</a>
+    </p>
+  </body>
+</html>
+
