--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link href="daily-challenge.css" rel="stylesheet" />
+    <link href="styles/shared.css" rel="stylesheet" />
+    <link href="styles/daily-challenge.css" rel="stylesheet" />
     <title>My Daliy Challenge</title>
   </head>
   <body>
+    <img src="images/challenges-trophy.jpg" alt="A trophy">
     <h1>Max Challenge for Thursday, June 23rd</h1>
     <p id="todays-challenge">
       Learn about the basics of web development - specifically dive into HTML &
       CSS.
     </p>
     <p>
-      I'll achieve this goal by diving into
-      <a href="https://www.google.com/">more learning resources.</a>
+      Explore the <a href="full-week.html">full week</a>.
     </p>
   </body>
 </html>
