--- a/full-week.html
+++ b/full-week.html
@@ -13,13 +13,30 @@
     <link href="styles/full-week.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>My Upcoming Challenges</h1>
+  <header>
+    <h1>My Upcoming Challenges</h1> 
+    <p id="description">These are my goals for the next days</p>
     <a href="index.html">View Today's Challenge</a>
+  </header>
+  <main>
     <ol>
-      <li>Report what i learned about HTML & CSS</li>
-      <li>Do the exercises on HTML & CSS</li>
-      <li>Dive deeper into HTML & CSS and build more complex website</li>
+      <li>
+        <h2>Friday, August 5th</h2>
+        <p>Report what i learned about HTML & CSS</p>
+      </li>
+      <li class="highlight-goal">
+        <h2>Saturday, August 6th</h2>
+        <p>Do the exercises on HTML & CSS</p>
+      </li>
+      <li class="highlight-goal">
+        <h2>Sunday, August 7th</h2>
+        <p>Dive deeper into HTML & CSS and build more complex website</p>
+      </li>
+      <li>
+        <h2>Monday, August 8th</h2>
+        <p>Practice advanced HTML & CSS concepts</p>
+      </li>
     </ol>
-    
+  </main>
 </body>
 </html>
