--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <title>My Daliy Challenge</title>
   </head>
   <body>
+  <main>
     <img src="images/challenges-trophy.jpg" alt="A trophy">
-    <h1>Max Challenge for Thursday, June 23rd</h1>
+    <h1>Max Challenge for <span>Thursday, June 23rd</span></h1>
     <p id="todays-challenge">
-      Learn about the basics of web development - specifically dive into HTML &
-      CSS.
+      Learn about the basics of web<br> development - specifically dive<br> into HTML & CSS.
     </p>
+  </main>
+  <footer>
     <p>
       Explore the <a href="full-week.html">full week</a>.
     </p>
+  </footer>
   </body>
 </html>
 
